# vulkan_game

./: CMakeLists.txt  README.md  build.sh
engine/: CMakeLists.txt
engine/core/: memory_manager.cpp  memory_manager.h  vortex_engine.cpp  vortex_engine.h  vulkan_context.cpp  vulkan_context.h  window.cpp  window.h
engine/ecs/: ecs_manager.h
engine/renderer/: buffer_allocator.cpp  buffer_allocator.h  command_buffer.cpp  command_buffer.h  pipeline_system.cpp  pipeline_system.h  shader_system.cpp  shader_system.h  synchronization.cpp  synchronization.h
engine/scene/: scene_manager.h
engine/scripting/: python_engine.cpp  python_engine.h
engine/utils/: file_utils.h  logger.cpp  logger.h
examples/: CMakeLists.txt
examples/test_scene/: interactive_main.cpp  main.cpp  simple_main.cpp  simple_triangle.cpp  triangle_rendering_demo.cpp  vortex_triangle.cpp
shaders/common/: common.frag.spv  simple.frag  simple.vert.spv
shaders/pbr/: pbr.vert
shaders/postfx/: bloom.frag
tools/: CMakeLists.txt
